remove inline blocks..hopefully that fixes spacing

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -8,12 +8,10 @@
         justify-content: space-between
 
         > .item
-            display: inline-block
             flex: 1
             text-align: center  // To center-align the link text within each item
             
         > .item > .link
-            display: inline-block
             font-weight: $thin-font
             font-size: 1.4rem
             padding: 20px 10px
